inserting single value with check option failed always get error (part of BUG#5995)